--- a/sftools-proxy/package.json
+++ b/sftools-proxy/package.json
@@ -11,5 +11,10 @@
   "license": "MIT",
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "@grpc/grpc-js": "^1.12.0",
+    "@grpc/proto-loader": "^0.7.13",
+    "avsc": "^5.7.7"
   }
 }
