--- a/manifest.json
+++ b/manifest.json
@@ -33,7 +33,8 @@
     ]
   },
   "background": {
-    "service_worker": "src/background/background.js"
+    "service_worker": "src/background/background.js",
+    "type": "module"
   },
   "web_accessible_resources": [
     {
