--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,16 @@
 {
   "manifest_version": 3,
-  "name": "Salesforce Dev Tools",
+  "name": "sftools",
   "version": "1.0",
-  "description": "Developer tools for Salesforce, combining API testing, dev console, and Aura debugging.",
+  "description": "Developer tools for Salesforce",
+  "icons": {
+    "16": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
+  },
   "action": {
-    "default_popup": "src/popup/popup.html"
+    "default_popup": "src/popup/popup.html",
+    "default_icon": "icon.png"
   },
   "permissions": [
     "storage",
