--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,13 @@
   "version": "1.0",
   "description": "Developer tools for Salesforce",
   "icons": {
-    "16": "icon.png",
-    "48": "icon.png",
-    "128": "icon.png"
+    "16": "dist/icon.png",
+    "48": "dist/icon.png",
+    "128": "dist/icon.png"
   },
   "action": {
     "default_popup": "dist/pages/popup/popup.html",
-    "default_icon": "icon.png"
+    "default_icon": "dist/icon.png"
   },
   "permissions": [
     "storage",
