--- a/sftools-proxy/package.json
+++ b/sftools-proxy/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.12.0",
     "@grpc/proto-loader": "^0.7.13",
-    "avsc": "^5.7.7"
+    "avsc": "^5.7.7",
+    "faye": "^1.4.0"
   }
 }
