--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "devDependencies": {
-    "vite": "^7.2.7",
-    "vite-plugin-monaco-editor": "^1.1.0"
+    "vite": "^7.2.7"
   },
   "dependencies": {
     "@jetstreamapp/soql-parser-js": "^6.3.1",
