--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "@jetstreamapp/soql-parser-js": "^6.3.1",
+    "@salesforce-ux/icons": "^10.5.4",
     "monaco-editor": "^0.55.1"
   },
   "scripts": {
