--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,17 @@
   "version": "1.0",
   "description": "Developer tools for Salesforce",
   "icons": {
-    "16": "dist/icon.png",
-    "48": "dist/icon.png",
-    "128": "dist/icon.png"
+    "16": "dist/icons/icon-16.png",
+    "32": "dist/icons/icon-32.png",
+    "48": "dist/icons/icon-48.png",
+    "128": "dist/icons/icon-128.png"
   },
   "action": {
-    "default_icon": "dist/icon.png"
+    "default_icon": {
+      "16": "dist/icons/icon-16.png",
+      "32": "dist/icons/icon-32.png",
+      "48": "dist/icons/icon-48.png"
+    }
   },
   "permissions": [
     "sidePanel",
@@ -29,7 +34,14 @@
   "web_accessible_resources": [
     {
       "resources": ["dist/*"],
-      "matches": ["<all_urls>"]
+      "matches": [
+        "*://*.salesforce.com/*",
+        "*://*.force.com/*",
+        "*://*.lightning.force.com/*",
+        "*://*.my.salesforce.com/*",
+        "*://*.visualforce.com/*",
+        "*://*.salesforce-sites.com/*"
+      ]
     }
   ],
   "content_security_policy": {
