--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -31,5 +31,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: sftools
-          path: sftools.zip
+          path: |
+            dist
+            manifest.json
+            rules.json
+            sftools-proxy
           retention-days: 7
