--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
     "sidePanel",
     "activeTab",
     "storage",
+    "unlimitedStorage",
     "contextMenus",
     "notifications",
     "nativeMessaging"
