--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "devDependencies": {
-    "vite": "^7.2.7",
-    "playwright": "^1.50.0",
-    "dotenv": "^16.4.7",
-    "glob": "^11.0.0",
-    "tsx": "^4.19.2",
-    "vitest": "^2.0.0",
     "@vitest/coverage-v8": "^2.0.0",
-    "jsdom": "^24.0.0"
+    "dotenv": "^16.4.7",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "glob": "^11.0.0",
+    "globals": "^17.1.0",
+    "jsdom": "^24.0.0",
+    "playwright": "^1.50.0",
+    "prettier": "^3.8.1",
+    "tsx": "^4.19.2",
+    "vite": "^7.2.7",
+    "vitest": "^2.0.0"
   },
   "dependencies": {
     "@jetstreamapp/soql-parser-js": "^6.3.1",
@@ -27,6 +32,10 @@
     "test:frontend": "tsx tests/frontend/run-tests.ts",
     "test:frontend:slow": "tsx tests/frontend/run-tests.ts --slow",
     "test:validate-ids": "node scripts/validate-test-ids.js",
-    "test:refresh-token": "node scripts/refresh-test-token.js"
+    "test:refresh-token": "node scripts/refresh-test-token.js",
+    "lint": "eslint src tests scripts",
+    "lint:fix": "eslint src tests scripts --fix",
+    "format": "prettier --write \"src/**/*.{js,css,html}\" \"tests/**/*.js\" \"scripts/**/*.js\"",
+    "format:check": "prettier --check \"src/**/*.{js,css,html}\" \"tests/**/*.js\" \"scripts/**/*.js\""
   }
 }
