--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "test:unit": "vitest run",
     "test:unit:watch": "vitest",
     "test:unit:coverage": "vitest run --coverage",
-    "test:integration": "vitest run --config vitest.config.integration.js",
-    "test:integration:watch": "vitest --config vitest.config.integration.js",
+    "test:integration": "vitest run --config vitest.config.integration.ts",
+    "test:integration:watch": "vitest --config vitest.config.integration.ts",
     "test:frontend": "tsx tests/frontend/run-tests.ts",
     "test:frontend:slow": "tsx tests/frontend/run-tests.ts --slow",
     "test:validate-ids": "node scripts/validate-test-ids.js",
