feat: Add React foundation (Phase 1)
- Install react, react-dom, @monaco-editor/react
- Install @vitejs/plugin-react and React type definitions
- Configure Vite with React plugin
- Add JSX support to tsconfig.json

Create React Context providers:
- ConnectionContext: manages auth state, connections, active connection
- ThemeContext: manages theme preference with system support
- ProxyContext: manages native proxy connection status

Add getTheme/setTheme functions to theme.ts for React integration.

All 619 unit tests passing, build successful.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "target": "ES2022",
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
 
+    "jsx": "react-jsx",
+
     "allowJs": true,
     "checkJs": false,
     "esModuleInterop": true,
@@ -29,6 +31,7 @@
   },
   "include": [
     "src/**/*.ts",
+    "src/**/*.tsx",
     "src/**/*.js",
     "src/types/**/*.d.ts"
   ],
