--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "devDependencies": {
     "@types/chrome": "^0.1.36",
+    "@types/react": "^19.2.9",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
     "@vitest/coverage-v8": "^2.0.0",
     "dotenv": "^16.4.7",
     "eslint": "^9.39.2",
@@ -19,9 +22,12 @@
   },
   "dependencies": {
     "@jetstreamapp/soql-parser-js": "^6.3.1",
+    "@monaco-editor/react": "^4.7.0",
     "@salesforce-ux/icons": "^10.5.4",
     "dompurify": "^3.3.1",
-    "monaco-editor": "^0.55.1"
+    "monaco-editor": "^0.55.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "scripts": {
     "build": "SFTOOLS_PRODUCTION=false vite build",
