--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "lint": "eslint src tests scripts",
     "lint:fix": "eslint src tests scripts --fix",
     "format": "prettier --write \"src/**/*.{js,ts,css,html}\" \"tests/**/*.{js,ts}\" \"scripts/**/*.js\"",
-    "format:check": "prettier --check \"src/**/*.{js,ts,css,html}\" \"tests/**/*.{js,ts}\" \"scripts/**/*.js\""
+    "format:check": "prettier --check \"src/**/*.{js,ts,css,html}\" \"tests/**/*.{js,ts}\" \"scripts/**/*.js\"",
+    "fix": "npm run lint:fix && npm run format",
+    "check": "npm run typecheck && npm run lint && npm run format:check",
+    "validate": "npm run lint:fix && npm run format && npm run typecheck && npm run lint && npm run format:check"
   }
 }
