refactor: migrate frontend tests from custom Playwright runner to Vitest with Playwright

--- a/package.json
+++ b/package.json
@@ -41,9 +41,8 @@
     "test:unit:coverage": "vitest run --coverage",
     "test:integration": "vitest run --config vitest.config.integration.ts",
     "test:integration:watch": "vitest --config vitest.config.integration.ts",
-    "test:frontend": "tsx tests/frontend/run-tests.ts",
-    "test:frontend:extension": "tsx tests/frontend/run-tests.ts --extension",
-    "test:frontend:slow": "tsx tests/frontend/run-tests.ts --slow",
+    "test:frontend": "vitest run --config vitest.config.browser.ts",
+    "test:frontend:watch": "vitest --config vitest.config.browser.ts",
     "test:validate-ids": "node scripts/validate-test-ids.js",
     "test:refresh-token": "node scripts/refresh-test-token.js",
     "lint": "eslint src tests scripts",
