--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -7,9 +7,6 @@ on:
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      checks: write
 
     steps:
       - name: Checkout repository
@@ -27,10 +24,8 @@ jobs:
       - name: Run unit tests
         run: npm run test:unit -- --reporter=github-actions --reporter=junit --outputFile=test-results.xml
 
-      - name: Test Report
-        uses: dorny/test-reporter@v1
+      - name: Test Summary
+        uses: test-summary/action@v2
         if: always()
         with:
-          name: Unit Test Results
-          path: test-results.xml
-          reporter: java-junit
+          paths: test-results.xml
