--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -35,5 +35,16 @@ jobs:
           path: test-results.xml
           reporter: java-junit
 
-      - name: Build
-        run: npm run build
+      - name: Build and package
+        run: npm run package
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: sftools
+          path: |
+            dist
+            manifest.json
+            rules.json
+            sftools-proxy
+          retention-days: 7
