--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -4,36 +4,24 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    types: [opened, reopened, synchronize]
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build and package
         run: npm run package
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: sftools
-          path: |
-            dist
-            manifest.json
-            rules.json
-            sftools-proxy
-          retention-days: 7
+      - name: Create release with notes
+        run: claude /release-notes
