--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build-and-test:
+    if: github.event.pull_request.draft == false
     runs-on: self-hosted
     permissions:
       contents: read
