--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "devDependencies": {
+    "@testing-library/react": "^16.3.2",
     "@types/chrome": "^0.1.36",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
