feat: add screenshot skill and PR screenshot integration
- Add /screenshot skill with subagent-driven Playwright capture pipeline
- Update /pr command to commit screenshots and embed in PR body
- Add /screenshots/ to gitignore (local working dir)

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ sftools-proxy/sftools-proxy.sh
 test-results/
 coverage/
 
+# Screenshots (local working dir; .github/screenshots/ is committed by /pr)
+/screenshots/
+
 # Claude
 .claude/plans/
 
