--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -19,6 +19,10 @@ jobs:
         with:
           fetch-depth: 0
           fetch-tags: true
+          clean: true
+
+      - name: Clean build caches
+        run: rm -rf dist node_modules/.vite
 
       - name: Install dependencies
         run: npm ci
