--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -31,4 +31,7 @@ jobs:
         run: npm run package
 
       - name: Create release with notes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CLAUDE_CODE_OAUTH_TOKEN: ${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
         run: claude /release-notes
