docs: add Obsidian knowledge vault with project documentation
Initialize .vault/ with 29 entries covering architecture, features,
APIs, configuration, and domain knowledge from all CLAUDE.md files.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ coverage/
 
 # dora code context index
 .dora/
+
+# Obsidian workspace (user-specific)
+.vault/.obsidian/workspace.json
+.vault/.obsidian/workspace-mobile.json
