--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "build": "SFTOOLS_PRODUCTION=false vite build",
         "watch": "SFTOOLS_PRODUCTION=false vite build --watch",
         "package": "SFTOOLS_PRODUCTION=true vite build && rm -f sftools.zip && zip -r sftools.zip dist manifest.json rules.json sftools-proxy -x 'sftools-proxy/node_modules/*'",
+        "package-prod": "SFTOOLS_PRODUCTION=true vite build && rm -f sftools.zip && zip -r sftools.zip dist manifest.json rules.json",
         "typecheck": "tsc --noEmit",
         "typecheck:watch": "tsc --noEmit --watch",
         "test:unit": "vitest run",
