--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -40,7 +40,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CLAUDE_CODE_OAUTH_TOKEN: ${{ secrets.CLAUDE_CODE_OAUTH_TOKEN }}
-        run: claude /release-notes
+        run: unset CLAUDECODE && claude /release-notes
 
       - name: Check if new release was created
         id: after-release
